--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
 install:
   - $SCRIPTS/travis_build_pv.sh
   - $SCRIPTS/travis_before_script_cleanup.sh
-  - export CMAKE_MODULE_PATH=$CMAKE_MODULE_PATH:$PV_DIR
+  - export CMAKE_MODULE_PATH=$PV_DIR
 
 
 cache:
